Added test cases